RESOLVED FIXED 258433
REGRESSION (263722@main): Unable to scroll language picker on etrade.com
https://bugs.webkit.org/show_bug.cgi?id=258433
Summary REGRESSION (263722@main): Unable to scroll language picker on etrade.com
Wenson Hsieh
Reported 2023-06-22 21:08:32 PDT
Attachments
Wenson Hsieh
Comment 1 2023-06-22 21:28:00 PDT
EWS
Comment 2 2023-06-29 12:25:19 PDT
Committed 265624@main (ac10daa79e26): <https://commits.webkit.org/265624@main> Reviewed commits have been landed. Closing PR #15224 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.